--- a/scss/_admin-general.scss
+++ b/scss/_admin-general.scss
@@ -43,3 +43,50 @@
 .acf-field .acf-label label {
   font-weight: 600;
 }
+
+#menu-management .menu-edit, #menu-settings-column .accordion-container, .comment-ays, .feature-filter, .manage-menus, .menu-item-handle, .popular-tags, .stuffbox, .widget-inside, .widget-top, .widgets-holder-wrap, .wp-editor-container, p.popular-tags, table.widefat {
+  border: 1px solid var(--sarika-color-white) !important;
+}
+
+.wp-core-ui select {
+  line-height: 1 !important;
+}
+
+// ACF Options Page - Mobile layout adjustment
+@media (max-width: 782px) {
+  #poststuff #post-body.columns-2 {
+    margin-right: 0;
+    display: flex;
+    flex-direction: column;
+
+    // Content area (ACF fields) - show FIRST
+    #post-body-content {
+      order: 1;
+      margin-bottom: 1rem;
+    }
+
+    // Sidebar (Publish box) - show LAST
+    #postbox-container-1 {
+      order: 2;
+      width: 100% !important;
+      margin: 0;
+    }
+  }
+
+  // Make Update button full width and taller
+  #submitdiv {
+    #major-publishing-actions,
+    #publishing-action {
+      text-align: left;
+
+      .button,
+      #publish {
+        width: 100%;
+        height: 48px;
+        font-size: 0.9375rem;
+        font-weight: 500;
+        justify-content: center;
+      }
+    }
+  }
+}
