--- a/scss/_admin-navigation.scss
+++ b/scss/_admin-navigation.scss
@@ -58,7 +58,7 @@
 	}
 
 	a {
-		color: var(--sarika-color-secondary, #474448);
+		color: var(--sarika-color-body, #474448);
 		text-decoration: none;
 		padding: var(--sarika-space-xs, 0.5rem) var(--sarika-space-md, 1rem);
 		border-radius: var(--sarika-radius-full, 999px);
