--- a/scss/_setup.scss
+++ b/scss/_setup.scss
@@ -21,7 +21,7 @@ body {
 
 a {
   color: var(--sarika-color-primary);
-  text-decoration: none;
+  text-decoration: none !important;
   transition: color 0.2s ease;
 
   &:hover,
